# obrazy1

./: .gitignore  pyproject.toml
scripts/: main.py
